@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 public class Ut {
@@ -20,11 +21,7 @@ public class Ut {
 
     public static class url {
         public static String encode(String str) {
-            try {
-                return URLEncoder.encode(str, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                return str;
-            }
+            return URLEncoder.encode(str, StandardCharsets.UTF_8);
         }
 
         public static String modifyQueryParam(String url, String paramName, String paramValue) {
@@ -35,11 +32,11 @@ public class Ut {
         }
 
         public static String addQueryParam(String url, String paramName, String paramValue) {
-            if (url.contains("?") == false) {
+            if (!url.contains("?")) {
                 url += "?";
             }
 
-            if (url.endsWith("?") == false && url.endsWith("&") == false) {
+            if (!url.endsWith("?") && !url.endsWith("&")) {
                 url += "&";
             }
 
